# cron-root-attention

./: .gitignore  LICENSE  NOTICE  README.md  TRADEMARK.md  bench_cpu_roofline.py  bench_vec_vs_loop.py  live.main.tex  pyproject.toml  training.pid
.github/: FUNDING.yml
cron_root_attention/: __init__.py  core.py  cpu_reference.py  hybrid.py  module.py
examples/: bench_model_quality.py  benchmark.py  benchmark_full.py  quickstart.py  replace_huggingface.py
paper/: cron_root_attention.tex
tests/: README.md  test_attention.py
