[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cron-root-attention"
version = "0.1.0"
description = "Cron Root Attention: Sub-quadratic O(N√N) attention kernels for long-context transformers"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zitacron"}
]
keywords = [
    "attention",
    "transformer",
    "triton",
    "cuda",
    "deep-learning",
    "long-context",
    "sparse-attention",
    "cron-root",
    "sqrt-attention"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "triton>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "black",
    "isort",
    "mypy",
]
benchmark = [
    "matplotlib",
    "pandas",
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/zitacron/cron-root-attention"
Documentation = "https://github.com/zitacron/cron-root-attention#readme"
Repository = "https://github.com/zitacron/cron-root-attention.git"
Issues = "https://github.com/zitacron/cron-root-attention/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cron_root_attention*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
